--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
     <h1>Ahoj</h1>
 
     <p>Já jsem Petra a toto je moje vizitka.</p>
+
+    <a href="kontakt.html">Můj kontakt</a>
 </body>
 </html>
