--- a/kontakt.html
+++ b/kontakt.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Kontakt</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Můj kontakt</h1>
